[gd_scene load_steps=24 format=3 uid="uid://bh1m1ayl3owxa"]

[ext_resource type="Script" uid="uid://c8104lykhb2g5" path="res://scripts/enemies/aborigine/aborigine.gd" id="1_3fth2"]
[ext_resource type="Texture2D" uid="uid://c6ieee4png12f" path="res://assets/sprites/enemies/monsters/spear/spear_1.png" id="2_6lhxl"]
[ext_resource type="Texture2D" uid="uid://8j3j06x85uqn" path="res://assets/sprites/enemies/monsters/spear/spear_9.png" id="2_xliva"]
[ext_resource type="Texture2D" uid="uid://cuq738phbncvi" path="res://assets/sprites/enemies/monsters/spear/spear_2.png" id="3_onroy"]
[ext_resource type="Texture2D" uid="uid://bbmw2dbfm3ut0" path="res://assets/sprites/enemies/monsters/spear/spear_10.png" id="3_v1m7u"]
[ext_resource type="Texture2D" uid="uid://f4s0y4n1icha" path="res://assets/sprites/enemies/monsters/spear/spear_11.png" id="4_66rsp"]
[ext_resource type="Texture2D" uid="uid://dje7itgwmabi5" path="res://assets/sprites/enemies/monsters/spear/spear_3.png" id="4_t15kb"]
[ext_resource type="Texture2D" uid="uid://dey6wk7b3euj5" path="res://assets/sprites/enemies/monsters/spear/spear_12.png" id="5_gcsb4"]
[ext_resource type="Texture2D" uid="uid://cs18v4ikcyit5" path="res://assets/sprites/enemies/monsters/spear/spear_4.png" id="5_nqjxp"]
[ext_resource type="Texture2D" uid="uid://b7r8ok4c2joj0" path="res://assets/sprites/enemies/monsters/spear/spear_5.png" id="6_28lt2"]
[ext_resource type="Texture2D" uid="uid://dsmq4ksgxty26" path="res://assets/sprites/enemies/monsters/spear/spear_6.png" id="7_xwchb"]
[ext_resource type="Texture2D" uid="uid://4oedp5c3nihy" path="res://assets/sprites/enemies/monsters/spear/spear_7.png" id="8_ys6e2"]
[ext_resource type="Texture2D" uid="uid://c7bcen2ofnedx" path="res://assets/sprites/enemies/monsters/spear/spear_8.png" id="9_gpq82"]
[ext_resource type="Texture2D" uid="uid://1u7kimbp81gh" path="res://assets/sprites/enemies/monsters/spear/spear_18.png" id="14_66rsp"]
[ext_resource type="Script" uid="uid://dkb25vr64v37l" path="res://scripts/utils/hit_area_2d.gd" id="14_v1m7u"]
[ext_resource type="Script" uid="uid://baja7r46hs05f" path="res://scripts/enemies/aborigine/normal.gd" id="14_xliva"]
[ext_resource type="Script" uid="uid://djfsh4o1swvg5" path="res://scripts/enemies/aborigine/attack.gd" id="15_xliva"]
[ext_resource type="Script" uid="uid://2dtm6jeegr43" path="res://scripts/utils/node2d_factory.gd" id="16_28lt2"]
[ext_resource type="PackedScene" uid="uid://b86cej7t00v27" path="res://scenes/enemies/coconut.tscn" id="17_xwchb"]
[ext_resource type="Script" uid="uid://ff4u4su00ntu" path="res://scripts/enemies/aborigine/throw.gd" id="18_gcsb4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5htcg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xliva")
}, {
"duration": 1.0,
"texture": ExtResource("3_v1m7u")
}, {
"duration": 1.0,
"texture": ExtResource("4_66rsp")
}, {
"duration": 1.0,
"texture": ExtResource("5_gcsb4")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_28lt2")
}, {
"duration": 1.0,
"texture": ExtResource("7_xwchb")
}, {
"duration": 1.0,
"texture": ExtResource("8_ys6e2")
}, {
"duration": 1.0,
"texture": ExtResource("9_gpq82")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6lhxl")
}, {
"duration": 1.0,
"texture": ExtResource("3_onroy")
}, {
"duration": 1.0,
"texture": ExtResource("4_t15kb")
}, {
"duration": 1.0,
"texture": ExtResource("5_nqjxp")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_66rsp")
}, {
"duration": 1.0,
"texture": ExtResource("7_xwchb")
}],
"loop": false,
"name": &"throw",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66rsp"]
size = Vector2(31, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_575ux"]
radius = 9.0

[node name="Aborigine" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_3fth2")
bullet_up_impulse = -400.0
health = 200.0
spike = 100.0
movement_speed = 50.0
metadata/_custom_type_script = "uid://da4xpmamo1d7r"

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
sprite_frames = SubResource("SpriteFrames_5htcg")
animation = &"throw"

[node name="DetectRayCast2D" type="RayCast2D" parent="Direction"]
visible = false
position = Vector2(0, 9)
target_position = Vector2(31, 0)
collision_mask = 60
collide_with_areas = true

[node name="FrontRayCast2D" type="RayCast2D" parent="Direction"]
visible = false
position = Vector2(0, 9)
target_position = Vector2(22, 0)
collide_with_areas = true

[node name="DownRayCast2D" type="RayCast2D" parent="Direction"]
visible = false
position = Vector2(12, 9)
target_position = Vector2(0, 15)

[node name="HitArea2D" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 60
script = ExtResource("14_v1m7u")
metadata/_custom_type_script = "uid://dkb25vr64v37l"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
position = Vector2(15.5, 9.5)
shape = SubResource("RectangleShape2D_66rsp")
disabled = true

[node name="LeftFactory" type="Marker2D" parent="Direction"]
position = Vector2(-13, 4)
script = ExtResource("16_28lt2")
product_packed_scene = ExtResource("17_xwchb")
target_container_name = &"Bullets"
metadata/_custom_type_script = "uid://2dtm6jeegr43"

[node name="RightFactory" type="Marker2D" parent="Direction"]
position = Vector2(14, 4)
script = ExtResource("16_28lt2")
product_packed_scene = ExtResource("17_xwchb")
target_container_name = &"Bullets"
metadata/_custom_type_script = "uid://2dtm6jeegr43"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 2)
shape = SubResource("CapsuleShape2D_575ux")

[node name="States" type="Node" parent="."]

[node name="Normal" type="Node" parent="States"]
script = ExtResource("14_xliva")

[node name="Attack" type="Node" parent="States"]
script = ExtResource("15_xliva")

[node name="Throw" type="Node" parent="States"]
script = ExtResource("18_gcsb4")
